# Boid-Simulation

./: README.txt
res/shaders/: aabb.glsl  simple_color.glsl  skymap.glsl
src/: CMakeLists.txt  application.cpp  application.hpp  boid.cpp  boid.hpp  main.cpp  scene.cpp  scene.hpp
src/cgra/: CMakeLists.txt  cgra_mesh.hpp  cgra_wavefront.hpp
